--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.10",
   "description": "Library for managing Beautiful CSS modals",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
